Expanded logging equality comparisons